removing tailwind + alignment fixes

--- a/urbbee/src/app.css
+++ b/urbbee/src/app.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 @font-face {
   font-family: 'Dongle';
   font-style: normal;
@@ -60,4 +56,18 @@
 
 .color-bb-dark {
   color: var(--bb-dark);
+}
+
+.logo-container {
+  width: 60%;
+  
+  display: inline-flex;
+  align-items: center;
+  margin-left: 7vw;
+
+  color: var(--dark);
+}
+
+.logo-container h1 {
+  font-size: 4rem;
 }
